# structure-walker

./: .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  go.mod  go.sum  main.c  main.go  promptForCode.go  utils.go  watcher.sh
BTree/: BTree.c  BTree.h
BinarySearchTree/: BinaryTree.c  BinaryTree.h
BreadthFirstSearch/: BreadthFirstSearch.go  Queue.go
DepthFirstSearch/: DepthFirstSearch.go  Stack.go
DoublyLinkedList/: DoublyLinkedList.c  DoublyLinkedList.h
Examples/: BTree.go  BinarySearchTree.go  BreadthFirstSearch.go  DepthFirstSearch.go  DoublyLinkedList.go  HashTable.go  MaxHeap.go  MinHeap.go  Queue.go  Stack.go  Trie.go  linkedList.go
HashTable/: HashTable.c  HashTable.h
LinkedList/: ListNode.h
MaxHeapTree/: MaxHeapTree.c  MaxHeapTree.h
Maze/: Maze.go
MinHeapTree/: MinHeapTree.c  MinHeapTree.h
Queue/: Queue.c  Queue.h
Stack/: Stack.c  Stack.h
Trie/: Trie.c  Trie.h
linkedList/: ListNode.c  ListNode.h  addTwoNums.c  linkedList.c
linkedListExamples/: linkedList.go
